force-app/main/default/objects/Contact/fields/Salutation_Primary_Broker__c.field-meta.xml
<CustomField>
    <fullName>Salutation_Primary_Broker__c</fullName>
    <defaultValue>&quot;Dear&quot;</defaultValue>
    <label>Salutation - Primary Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>