force-app/main/default/objects/Contact/fields/Source_detail__c.field-meta.xml
<CustomField>
    <fullName>Source_detail__c</fullName>
    <label>Source detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antigua</fullName>
            </value>
            <value>
                <fullName>Arabian Business</fullName>
            </value>
            <value>
                <fullName>Asia Pacific Boating</fullName>
            </value>
            <value>
                <fullName>Aspen</fullName>
            </value>
            <value>
                <fullName>Australian Financial Review</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Bentley Magazine</fullName>
            </value>
            <value>
                <fullName>Bloomberg</fullName>
            </value>
            <value>
                <fullName>Boat International</fullName>
            </value>
            <value>
                <fullName>Boat International Website</fullName>
            </value>
            <value>
                <fullName>Burgess App</fullName>
            </value>
            <value>
                <fullName>Burgess Cross Dept</fullName>
            </value>
            <value>
                <fullName>Burgess Magazine</fullName>
            </value>
            <value>
                <fullName>Burgess Newsletter</fullName>
            </value>
            <value>
                <fullName>Burgess Sales Update</fullName>
            </value>
            <value>
                <fullName>Burgess Website</fullName>
            </value>
            <value>
                <fullName>Business Insider</fullName>
            </value>
            <value>
                <fullName>Business Review Weekly</fullName>
            </value>
            <value>
                <fullName>Cannes</fullName>
            </value>
            <value>
                <fullName>Caribbean Charter</fullName>
            </value>
            <value>
                <fullName>Challenges (Magazine)</fullName>
            </value>
            <value>
                <fullName>Charter B2B</fullName>
            </value>
            <value>
                <fullName>Cold Email</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Forbes</fullName>
            </value>
            <value>
                <fullName>Fort Lauderdale</fullName>
            </value>
            <value>
                <fullName>From Burgess Staff</fullName>
            </value>
            <value>
                <fullName>From Existing Client</fullName>
            </value>
            <value>
                <fullName>From Industry Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>