force-app/main/default/objects/Contact/fields/Surveyor_True__c.field-meta.xml
<CustomField>
    <fullName>Surveyor_True__c</fullName>
    <formula>INCLUDES(Role__c, &quot;Surveyor&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surveyor True</label>
    <type>Checkbox</type>
</CustomField>