force-app/main/default/objects/Contact/fields/Terms_of_Use_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Use_Accepted_Date__c</fullName>
    <label>Terms of Use Accepted Date</label>
    <type>DateTime</type>
</CustomField>