force-app/main/default/objects/Contact/fields/Terms_of_Use_Version__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Use_Version__c</fullName>
    <label>Terms of Use Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>