force-app/main/default/objects/Contact/fields/Third_Party_Client_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Client_Created_Date__c</fullName>
    <label>Third Party Client Created Date</label>
    <type>Date</type>
</CustomField>