force-app/main/default/objects/Contact/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>&quot;change to pick list value matching Nigel title&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>