force-app/main/default/objects/Contact/fields/Wealth_qualified__c.field-meta.xml
<CustomField>
    <fullName>Wealth_qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wealth qualified</label>
    <type>Checkbox</type>
</CustomField>