force-app/main/default/objects/Contact/fields/Web_Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Web_Account_Created_Date__c</fullName>
    <label>Web Account Created Date</label>
    <type>Date</type>
</CustomField>