force-app/main/default/objects/Contact/fields/Web_Account_Failed_Login_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Web_Account_Failed_Login_Attempts__c</fullName>
    <label>Web Account Failed Login Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>