force-app/main/default/objects/Contact/fields/Web_Account_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Web_Account_Last_Login_Date__c</fullName>
    <label>Web Account Last Login Date</label>
    <type>Date</type>
</CustomField>