force-app/main/default/objects/Contact/fields/Web_Account_Locked__c.field-meta.xml
<CustomField>
    <fullName>Web_Account_Locked__c</fullName>
    <label>Web Account Locked</label>
    <type>DateTime</type>
</CustomField>