force-app/main/default/objects/Contact/fields/Web_Password__c.field-meta.xml
<CustomField>
    <fullName>Web_Password__c</fullName>
    <label>Web Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>