force-app/main/default/objects/Contact/fields/Website_Broker_Access__c.field-meta.xml
<CustomField>
    <fullName>Website_Broker_Access__c</fullName>
    <label>Website Broker Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>