force-app/main/default/objects/Contact/validationRules/ThirdPartyClientDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ThirdPartyClientDate</fullName>
    <active>true</active>
    <errorConditionFormula>(
INCLUDES(Role__c, &apos;Third Party Client&apos;) &amp;&amp;
isnull( Third_Party_Client_Created_Date__c)
)
||
(
not(INCLUDES(Role__c, &apos;Third Party Client&apos;)) &amp;&amp;
not(isnull( Third_Party_Client_Created_Date__c))
)</errorConditionFormula>
    <errorDisplayField>Third_Party_Client_Created_Date__c</errorDisplayField>
    <errorMessage>If Role is Third Party Client then Third Party Client Created Date must be populated.  If Role is not Third Party Client then you cannot populate  Third Party Client Created Date.</errorMessage>
</ValidationRule>