force-app/main/default/objects/Contact/listViews/All_Clients_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Clients_Contacts</fullName>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>Contact_Type__c</columns>
    <columns>Role__c</columns>
    <columns>Wealth_qualified__c</columns>
    <columns>LKW_Amount__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>ACCOUNT.OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <label>All Clients</label>
</ListView>